[package]
name = "bandit_lite"
version = "0.3.0-beta2"
edition = "2024"
license-file = "LICENSE.md"
repository = "https://github.com/That-H/bandit_lite"

[dependencies]
bandit = { git = "https://github.com/That-H/bandit", tag = "0.4.7", features = [] }
crossterm = "0.29.0"
directories = "6.0.0"
md5 = "0.8.0"
rfd = "0.17.2"
